<resources>
    <string name="app_name">UES APP RR</string>
    <string name="menuButton">Mostrar materias</string>
    <string name="materia1">Materia 1</string>
    <string name="materia2">Materia 2</string>
    <string name="materia3">Materia 3</string>
    <string name="materia4">Materia 1</string>
    <string name="materia5">Materia 2</string>
    <string name="materia6">Materia 3</string>
    <string name="materia7">Materia 1</string>
    <string name="materia8">Materia 2</string>
    <string name="materia9">Materia 3</string>
    <string name="materia10">Materia 1</string>
    <string name="materia11">Desarrollo Económico y Medio Ambiente</string>
    <string name="materia12">Materia 3</string>
    <string name="materia13">Materia 1</string>
    <string name="materia14">Materia 2</string>
    <string name="materia15">Teoría de las Relaciones Internacionales</string>
    <string name="materia16">Materia 1</string>
    <string name="materia17">Materia 2</string>
    <string name="materia18">Materia 3</string>
    <string name="materia19">Materia 1</string>
    <string name="materia20">Materia 2</string>
    <string name="materia21">Materia 3</string>
    <string name="materia22">Materia 1</string>
    <string name="materia23">Materia 2</string>
    <string name="materia24">Materia 3</string>
    <string name="materia25">Economia Internacional</string>
    <string name="materia26">Materia 2</string>
    <string name="materia27">Materia 3</string>
    <string name="materia28">Materia 2</string>
    <string name="materia29">Materia 3</string>
    <string name="materia30">Cooperación Internacional</string>
    <string name="materia31">Materia 3</string>
    <string name="materia32">Materia 2</string>
    <string name="materia33">Materia 3</string>
    <string name="materia34">Materia 1</string>
    <string name="materia35">Materia 2</string>
    <string name="materia36">Materia 3</string>
    <string name="materia37">Materia 1</string>
    <string name="materia38">Materia 2</string>
    <string name="materia39">Materia 3</string>
    <string name="materia40">Materia 3</string>
    <string name="materia41">Materia 1</string>
    <string name="materia42">Materia 2</string>
    <string name="materia43">Materia 3</string>
    <string name="materia44">Materia 1</string>
    <string name="materia45">Materia 2</string>
    <string name="materia46">Materia 3</string>
    <string name="materia47">Materia 1</string>
    <string name="materia48">Materia 2</string>
    <string name="materia49">Materia 3</string>
    <string name="action_settings">settings</string>
    <string name="menumaterias2"><b>Facultad de Jurisprudencia y Ciencias Sociales</b></string>
    <string name="menumaterias1"><b>Escuela de Relaciones Internacionales</b></string>


    <!--Facebook session -->
    <string name="facebook_app_id">202164323805529</string>
    <string name="fb_login_protocol_scheme">fb202164323805529</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="pregunta">Pregunta</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
</resources>
