<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/Año4"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ciclo 7"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/tab_element"/>
        <Button
            android:id="@+id/CIN"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/materia30"
            android:background="@color/menuButton"
            android:onClick="OpenActivities"
            android:layout_marginTop="@dimen/tab_element"/>
        <Button
            android:id="@+id/materia31"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/materia31"
            android:background="@color/menuButton"
            android:onClick="OpenActivities"
            android:layout_marginTop="@dimen/tab_element"/>
        <Button
            android:id="@+id/materia32"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/materia32"
            android:background="@color/menuButton"
            android:onClick="OpenActivities"
            android:layout_marginTop="@dimen/tab_element"/>
        <Button
            android:id="@+id/materia33"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/materia33"
            android:background="@color/menuButton"
            android:onClick="OpenActivities"
            android:layout_marginTop="@dimen/tab_element"/>
        <Button
            android:id="@+id/materia34"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/materia34"
            android:background="@color/menuButton"
            android:layout_marginTop="@dimen/tab_element"/>
        <Button
            android:id="@+id/materia35"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/materia35"
            android:background="@color/menuButton"
            android:onClick="OpenActivities"
            android:layout_marginTop="@dimen/tab_element"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ciclo 8"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/tab_element"/>
        <Button
            android:id="@+id/materia36"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/materia36"
            android:background="@color/menuButton1"
            android:onClick="OpenActivities"
            android:layout_marginTop="@dimen/tab_element"/>
        <Button
            android:id="@+id/materia37"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/materia37"
            android:background="@color/menuButton1"
            android:onClick="OpenActivities"
            android:layout_marginTop="@dimen/tab_element"/>
        <Button
            android:id="@+id/materia38"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/materia38"
            android:background="@color/menuButton1"
            android:onClick="OpenActivities"
            android:layout_marginTop="@dimen/tab_element"/>
        <Button
            android:id="@+id/materia39"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/materia39"
            android:background="@color/menuButton1"
            android:onClick="OpenActivities"
            android:layout_marginTop="@dimen/tab_element"/>
        <Button
            android:id="@+id/materia40"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/materia40"
            android:background="@color/menuButton1"
            android:onClick="OpenActivities"
            android:layout_marginTop="@dimen/tab_element"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>