<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/Año5"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ciclo 9"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/tab_element"/>
        <Button
            android:id="@+id/materia41"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/materia41"
            android:background="@color/menuButton"
            android:onClick="OpenActivities"
            android:layout_marginTop="@dimen/tab_element"/>
        <Button
            android:id="@+id/materia42"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/materia42"
            android:background="@color/menuButton"
            android:onClick="OpenActivities"
            android:layout_marginTop="@dimen/tab_element"/>
        <Button
            android:id="@+id/materia43"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/materia43"
            android:background="@color/menuButton"
            android:onClick="OpenActivities"
            android:layout_marginTop="@dimen/tab_element"/>
        <Button
            android:id="@+id/materia44"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/materia44"
            android:background="@color/menuButton"
            android:onClick="OpenActivities"
            android:layout_marginTop="@dimen/tab_element"/>
        <Button
            android:id="@+id/materia45"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/materia45"
            android:background="@color/menuButton"
            android:onClick="OpenActivities"
            android:layout_marginTop="@dimen/tab_element"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ciclo 10"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/tab_element"/>
        <Button
            android:id="@+id/materia46"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/materia46"
            android:background="@color/menuButton1"
            android:onClick="OpenActivities"
            android:layout_marginTop="@dimen/tab_element"/>
        <Button
            android:id="@+id/materia47"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/materia47"
            android:background="@color/menuButton1"
            android:onClick="OpenActivities"
            android:layout_marginTop="@dimen/tab_element"/>
        <Button
            android:id="@+id/materia48"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/materia48"
            android:background="@color/menuButton1"
            android:onClick="OpenActivities"
            android:layout_marginTop="@dimen/tab_element"/>
        <Button
            android:id="@+id/materia49"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/materia49"
            android:background="@color/menuButton1"
            android:onClick="OpenActivities"
            android:layout_marginTop="@dimen/tab_element"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>